--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<title>xtrm.me - home</title>
-	</head>
-	<body>
-		<p>
-			work in progress
-		</p>
-	</body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>xtrm.me &mdash; home</title>
+  </head>
+  <body>
+    <noscript>
+      Sorry, I do understand protecting your privacy is important to you, but this website requires a little amount of JavaScript to run properly.
+      You can check its source code at https://source.xtrm.me/ if you are unsure about trusting my low-level JS code.
+    </noscript>
+
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
