index.html: nicer noscript message

--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
     <noscript>
       <div id="wrapper" style="position: fixed; top: 0px; left: 0px; height: 100%; width: 100%; background-color: #111; color: #ecf0f1; font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
         <div id="center-box" style="position: fixed; left: 50%; top: 50%; transform: translate(-50%, -50%); text-align: center; min-width: 90%;">
-          Sorry, I do understand protecting your privacy is important to you,
-          but this website requires a little amount of JavaScript to run
-          properly.
+          Sorry, I do understand the importance of protecting your privacy,
+          but this website requires a little amount of basic JavaScript to run properly.
           <br>
           You can check its source code at
           <a href="https://source.xtrm.me">source.xtrm.me</a> if you are unsure
-          about trusting my low-level JS code.
+          about trusting my poorly-written ReactJS code.
         </div>
       </div>
     </noscript>
